--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ href="http://www.springer.com/gp/book/9783319461601">here</a></font>.
                         correct and appropriate conclusions from the
                         results are vital. </font><font
                         face="Helvetica, Arial, sans-serif"> <font
-                          color="#ffffff">The text is primarily intended
+                          color="#ffffff">The text is intended
                           for undergraduate students and self-learners
                           in disciplines like business administration,
                           the social sciences, medicine, politics,
